tests/single_instruction_translation_validation/mcsema/register-variants/ucomiss_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:193:35: error: use of undefined value '@__remill_error'
  %23 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %22, %struct.Memory* %0) #21
                                  ^
0.02user 0.01system 0:00.03elapsed 108%CPU (0avgtext+0avgdata 27384maxresident)k
0inputs+16outputs (0major+3254minor)pagefaults 0swaps
